# citadel

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MVP_PLAN.md  README.md  example.env  task-16-brief.md  task-17-brief.md  task-18-brief.md  task-20-report.md  task-21-brief.md
app/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
app/capabilities/: default.json
app/icons/: icon.icns
app/src/: App.tsx  lib.rs  main.rs  styles.css  tx_watcher.rs
app/src/commands/: activity.rs  amm.rs  bridge.rs  burn.rs  dexy.rs  ergopad_recovery.rs  explorer.rs  hodlcoin.rs  lending.rs  mewlock.rs  mod.rs  node.rs  sigmafi.rs  sigmausd.rs  signing.rs  stake_recovery.rs  utxo.rs  wallet.rs
crates/citadel-api/: Cargo.toml
crates/citadel-api/src/: dto.rs  lib.rs  server.rs  state.rs
crates/citadel-api/src/dto/: lending.rs  mod.rs
crates/citadel-api/src/routes/: amm.rs  dexy.rs  health.rs  lending.rs  mod.rs  node.rs  sigmausd.rs
crates/citadel-api/src/services/: activity.rs  burn.rs  dexy.rs  error.rs  explorer.rs  hodlcoin.rs  lending.rs  mewlock.rs  mod.rs  node.rs  sigmafi.rs  sigmausd.rs  signing.rs  stake_recovery.rs  utxo.rs  wallet.rs
crates/citadel-api/src/services/amm/: arb.rs  lp.rs  mod.rs  quote.rs  router.rs  swap.rs
crates/citadel-core/: Cargo.toml
crates/citadel-core/src/: config.rs  errors.rs  lib.rs  types.rs
crates/ergo-node-client/: Cargo.toml
crates/ergo-node-client/src/: capabilities.rs  lib.rs  queries.rs
crates/ergo-node-client/tests/: live_probe.rs
crates/ergo-tx/: Cargo.toml
crates/ergo-tx/src/: address.rs  box_selector.rs  burn.rs  chain.rs  dev_fee.rs  eip12.rs  ergo_box_utils.rs  lib.rs  send.rs  sigma.rs  tx_helpers.rs  utxo_management.rs
crates/ergo-tx/tests/: change_output_golden.rs
crates/ergo-tx/tests/fixtures/: append_change_output_basic.json  change_output_basic.json  change_output_empty_assets.json
crates/ergopay-core/: Cargo.toml
crates/ergopay-core/src/: error.rs  lib.rs  reduce.rs  reduce_fallback.rs  types.rs
crates/ergopay-server/: Cargo.toml
crates/ergopay-server/src/: handlers.rs  lib.rs  nautilus_page.rs  server.rs  types.rs
crates/protocols/amm/: Cargo.toml
crates/protocols/amm/src/: arb_chain.rs  calculator.rs  constants.rs  cross_protocol.rs  direct_swap.rs  fetch.rs  lib.rs  lp_deposit.rs  lp_order.rs  lp_redeem.rs  pool_setup.rs  refund.rs  router.rs  state.rs  tx_builder.rs
crates/protocols/amm/src/direct_swap/: mod.rs  n2t.rs  t2t.rs  tests.rs
crates/protocols/amm/src/router/: arb.rs  depth.rs  graph.rs  mod.rs  search.rs  split.rs  tests.rs  types.rs
crates/protocols/amm/tests/: router_direct_swap_golden.rs
crates/protocols/amm/tests/fixtures/: direct_swap_erg_to_token.json  direct_swap_erg_to_token_summary.json  router_best_multihop_quote.json
crates/protocols/citadel-timelock/: DESIGN.md
crates/protocols/dexy/: Cargo.toml
crates/protocols/dexy/src/: calculator.rs  constants.rs  fetch.rs  lib.rs  rates.rs  state.rs  tx_builder.rs
crates/protocols/dexy/tests/: tx_builder_golden.rs
crates/protocols/ergopad_recovery/: Cargo.toml
crates/protocols/ergopad_recovery/src/: constants.rs  fetch.rs  lib.rs  state.rs  tx_builder.rs
crates/protocols/hodlcoin/: Cargo.toml
crates/protocols/hodlcoin/src/: calculator.rs  constants.rs  fetch.rs  lib.rs  state.rs  tx_builder.rs
crates/protocols/lending/: Cargo.toml
crates/protocols/lending/src/: calculator.rs  constants.rs  fetch.rs  lib.rs  state.rs  tx_builder.rs
crates/protocols/lending/src/tx_builder/: borrow.rs  common.rs  lend.rs  mod.rs  refund.rs  repay.rs  tests.rs  withdraw.rs
crates/protocols/lending/src/tx_builder/tests/: borrow_tests.rs  common_tests.rs  lend_tests.rs  mod.rs  refund_tests.rs  repay_tests.rs  withdraw_tests.rs
crates/protocols/lending/tests/: tx_builder_golden.rs
crates/protocols/lending/tests/fixtures/: build_borrow_tx_sigusd.json  build_lend_tx_erg.json  build_refund_tx_basic.json  build_refund_tx_repay_proxy.json  build_repay_tx_erg.json  build_withdraw_tx_erg.json
crates/protocols/mewlock/: Cargo.toml
crates/protocols/mewlock/src/: constants.rs  fetch.rs  (+3 more)
crates/protocols/rosen/: Cargo.toml
crates/protocols/sigmafi/: Cargo.toml
crates/protocols/sigmafi/src/: calculator.rs  constants.rs  fetch.rs  lib.rs  state.rs  tx_builder.rs
crates/protocols/sigmausd/: Cargo.toml
crates/protocols/sigmausd/src/: calculator.rs  constants.rs  fetch.rs  lib.rs  state.rs  tx_builder.rs
crates/protocols/stake_recovery/: Cargo.toml
docs/plans/: 2026-03-01-arb-reverse-tighten-design.md  2026-03-01-circular-arb-scanner-design.md  2026-03-01-circular-arb-scanner-impl.md
docs/superpowers/plans/: 2026-03-25-smart-swap.md
docs/superpowers/specs/: 2026-03-25-smart-swap-design.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  constants.ts  index.css
frontend/src/api/: amm.ts  arb.ts  burn.ts  dexySwap.ts  donate.ts  ergopadRecovery.ts  explorer.ts  external.ts  hodlcoin.ts  lending.ts  mewlock.ts  nodes.ts  notifications.ts  orders.ts  protocolActivity.ts  rosen.ts  router.ts  sigmafi.ts  stakeRecovery.ts  tokenCache.ts  txClassifier.ts  types.ts  utxoManagement.ts  wallet.ts
frontend/src/components/: AdvancedOptions.css  AdvancedOptions.tsx  AppShell.css  ArbExecuteModal.tsx  ArbScannerTab.css  ArbScannerTab.tsx  BorrowModal.tsx  BridgeModal.tsx  BridgeTab.css  BridgeTab.tsx  BurnTab.css  BurnTab.tsx  CreateOrderModal.css  CreateOrderModal.tsx  Dashboard.css  Dashboard.tsx  DexyMintModal.css  DexyMintModal.tsx  DexyPathCard.css  DexyPathCard.tsx  DexySwapModal.css  DexySwapModal.tsx  DexyTab.css  DexyTab.tsx  DonateModal.css  DonateModal.tsx  ErgopadRecoveryTab.css  ErgopadRecoveryTab.tsx  ExplorerTab.tsx  HodlCoinModal.css  HodlCoinModal.tsx  HodlCoinTab.css  HodlCoinTab.tsx  LendModal.css  LendModal.tsx  LendingTab.css  LendingTab.tsx  MarketCard.tsx  MintModal.tsx  NotificationBell.css  (+45 more)
frontend/src/contexts/: ExplorerNavContext.tsx
frontend/src/hooks/: useModalStep.ts  useNotifications.ts  useTransactionFlow.ts
frontend/src/utils/: eip4.ts  format.ts
(+72 files in other folders)
