[package]
name = "citadel-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP API layer for Citadel"

[dependencies]
citadel-core = { workspace = true }
ergo-node-client = { workspace = true }
ergopay-server = { workspace = true }
sigmausd = { workspace = true }
dexy = { workspace = true }
lending = { workspace = true }
amm = { workspace = true }
ergo-tx = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
