[package]
name = "citadel-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Citadel application façade (AppState, DTOs, services)"

[dependencies]
citadel-core = { workspace = true }
ergo-node-client = { workspace = true }
ergopay-core = { workspace = true }
ergopay-server = { workspace = true }
sigmausd = { workspace = true }
dexy = { workspace = true }
lending = { workspace = true }
amm = { workspace = true }
hodlcoin = { workspace = true }
mewlock = { workspace = true }
sigmafi = { workspace = true }
stake-recovery = { workspace = true }
ergo-lib = { workspace = true }
ergo-tx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
futures = "0.3.31"
