[package]
name = "ergo-tx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Transaction building utilities for Ergo"

[features]
default = []
ergo-lib = ["dep:ergo-lib", "dep:base16"]

[dependencies]
citadel-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
ergo-lib = { workspace = true, optional = true }
base16 = { version = "0.2", optional = true }
