[package]
name = "lending"
version.workspace = true
edition.workspace = true
description = "Duckpools lending protocol implementation for Citadel"

[dependencies]
citadel-core = { path = "../../citadel-core" }
ergo-node-client = { path = "../../ergo-node-client" }
ergo-tx = { path = "../../ergo-tx", features = ["ergo-lib"] }
ergo-lib = { version = "0.28", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
hex = "0.4"
