[package]
name = "sigmafi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SigmaFi P2P bond protocol implementation for Citadel"

[dependencies]
citadel-core = { workspace = true }
ergo-node-client = { workspace = true }
ergo-tx = { workspace = true, features = ["ergo-lib"] }
ergo-lib = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
blake2 = "0.10"
